// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorPage > renders correctly 1`] = `
<div class="
  d-flex
  justify-center
  px-14
  py-10
  vd-page-container
">
  <div
    class="
      bg-transparent
      v-sheet
      v-theme--light
    "
    style="width: 800px;"
  >
    <div class="
      elevation-0
      pa-6
      pa-sm-16
      v-card
      v-card--density-default
      v-card--variant-elevated
      v-theme--light
    ">
      <!---->
      <div class="v-card__loader">
        <div
          aria-hidden="true"
          aria-valuemax="100"
          aria-valuemin="0"
          class="
            v-locale--is-ltr
            v-progress-linear
            v-theme--light
          "
          role="progressbar"
          style="
            top: 0px;
            height: 0px;
            --v-progress-linear-height: 2px;
          "
        >
          <!---->
          <div
            class="v-progress-linear__background"
            style="opacity: NaN;"
          ></div>
          <div
            class="v-progress-linear__buffer"
            style="
              opacity: NaN;
              width: 0%;
            "
          ></div>
          <transition-stub
            appear="false"
            css="true"
            name="fade-transition"
            persisted="false"
          >
            <div class="v-progress-linear__indeterminate">
              <div class="
                long
                v-progress-linear__indeterminate
              "></div>
              <div class="
                short
                v-progress-linear__indeterminate
              "></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <div class="
        max-width-none
        v-row
      ">
        <div class="
          align-sm-start
          d-flex
          flex-column
          justify-center
          order-last
          order-sm-first
          text-center
          text-sm-left
          v-col-12
          v-col-sm-12
        ">
          <!-- v-if -->
          <h1 class="
            font-weight-bold
            mb-2
            mb-4
            text-h5
          ">
            Something went wrong
          </h1>
          <p>
            <span>
              Error message
            </span>
          </p>
          <!-- v-if -->
        </div>
        <!-- v-if -->
      </div>
      <!---->
      <!---->
      <span class="v-card__underlay"></span>
    </div>
  </div>
</div>
`;

exports[`ErrorPage > renders correctly with undefined route 1`] = `
<div class="
  d-flex
  justify-center
  px-14
  py-10
  vd-page-container
">
  <div
    class="
      bg-transparent
      v-sheet
      v-theme--light
    "
    style="width: 800px;"
  >
    <div class="
      elevation-0
      pa-6
      pa-sm-16
      v-card
      v-card--density-default
      v-card--variant-elevated
      v-theme--light
    ">
      <!---->
      <div class="v-card__loader">
        <div
          aria-hidden="true"
          aria-valuemax="100"
          aria-valuemin="0"
          class="
            v-locale--is-ltr
            v-progress-linear
            v-theme--light
          "
          role="progressbar"
          style="
            top: 0px;
            height: 0px;
            --v-progress-linear-height: 2px;
          "
        >
          <!---->
          <div
            class="v-progress-linear__background"
            style="opacity: NaN;"
          ></div>
          <div
            class="v-progress-linear__buffer"
            style="
              opacity: NaN;
              width: 0%;
            "
          ></div>
          <transition-stub
            appear="false"
            css="true"
            name="fade-transition"
            persisted="false"
          >
            <div class="v-progress-linear__indeterminate">
              <div class="
                long
                v-progress-linear__indeterminate
              "></div>
              <div class="
                short
                v-progress-linear__indeterminate
              "></div>
            </div>
          </transition-stub>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <div class="
        max-width-none
        v-row
      ">
        <div class="
          align-sm-start
          d-flex
          flex-column
          justify-center
          order-last
          order-sm-first
          text-center
          text-sm-left
          v-col-12
          v-col-sm-12
        ">
          <div class="
            mb-4
            sy-code
            text-primary
          ">
            <span class="d-sr-only">
              Code d'erreur&nbsp;:
            </span>
            501
          </div>
          <h1 class="
            font-weight-bold
            mb-2
            mb-4
            text-h5
          ">
            Error
          </h1>
          <p>
            Error message
          </p>
          <a
            class="
              bg-primary
              mt-6
              v-btn
              v-btn--density-default
              v-btn--elevated
              v-btn--size-default
              v-btn--variant-elevated
              v-theme--light
            "
            href="https://google.com"
          ><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            
          <!----><span
            class="v-btn__content"
            data-no-activator=""
          >Go to...</span>
            
          <!---->
            
          <!---->
          </a>
        </div>
        <!-- v-if -->
      </div>
      <!---->
      <!---->
      <span class="v-card__underlay"></span>
    </div>
  </div>
</div>
`;
